--- a/i18n/ar/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
+++ b/i18n/ar/components/pages/national-targets/my-country/part-1/edit-target-part-1.json
@@ -49,5 +49,63 @@
   "additionalExplanation": "المزيد من الشرح",
   "additionalInformation": "معلومات إضافية",
   "relevantInformation": "أي معلومات أخرى ذات صلة",
-  "globalGoalsAndTargets": "الأهداف/الغايات العالمية"
+  "globalGoalsAndTargets": "الأهداف/الغايات العالمية",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.427Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "general": "0db377921f4ce762c62526131097968f",
+      "government": "18450de39aceed82b26abe218d377740",
+      "degreeOfAlignment": "dd2b12b0d63c8b0fa04c9d07341d81d6",
+      "nationalTarget": "8319df976754d6ac93687e0213475253",
+      "governmentAndLanguages": "00196a85b00e7e2a17724bb3bc95b82a",
+      "submissionLanguage": "602b7ef0a2530a7c497820e902dcc982",
+      "titleHelp": "7ad85f58f93e0eb688cbee6b7c3a248a",
+      "title": "8eafe3209e2aec522574f0238d211632",
+      "description": "b5a7adde1af5c87d7fd797b6245c2a39",
+      "mainPolicyMeasures": "a19d4b531299216eaa145b0ac0cc3c03",
+      "globalGoals": "42800515d986f07cf84753cfcaff1592",
+      "contributionToGoals": "171d1dad5136815bd849f9ca6872e561",
+      "targetsAlignment": "99d227445791b8fb9ea07f6999d2222e",
+      "globalTargets": "5ebd1fa1da0221ab920721bf9e90c1ac",
+      "listTargets": "5eb8740b9529884022b759abb833406c",
+      "relevantDegreeOfAlignmentHelp": "27db9972c8b50b63aecca0433e45d0f3",
+      "degreeOf": "d884ab5f8a0280da43ed4f40b47f07b2",
+      "alignment": "a63706eecfa33f67b315f978392ad7ae",
+      "indicateHelp": "ff6e9f4724e0aec76d0cf20aeb379cd8",
+      "high": "1b103bf951ce72bbbae5998de2bf7f51",
+      "medium": "b48ad2dbd6c54c1ad455089489a1ef09",
+      "low": "2402d0f9442556bdfd7a562e7250cd96",
+      "explainCoveredGoals": "a102a79f426c889c2c0acbf8c7eb6a9f",
+      "considerationForImplementation": "018df75a1653b8da157322378d140b65",
+      "relevantConsideration": "c6523b2c49aa324bdd9fecee2d7d4046",
+      "explainConsideration": "72dae73a8f49b29adfa7183e12c6f442",
+      "indicatorsUsedToMonitor": "a2c75ccfd04d6df360eab8651c704e2f",
+      "headlineIndicators": "fdd0e464661e25714b993064b0458a1a",
+      "linkedHeadlineIndicator": "69a8ce309cf9978e12904418e09d3337",
+      "binaryIndicators": "6f30f25d59ca314018f353be0bfc7e27",
+      "linkedBinaryIndicator": "0dccc1d9cce64de470e5647924840058",
+      "componentIndicators": "17b02bb8c66a01e8cfb0c3d39ac60716",
+      "complementaryIndicators": "48041098bef85726387d524ace8cd8d5",
+      "nationalIndicators": "63279f9d402f9cbf23c4f5c293a8b4f5",
+      "addOwnIndicatorsHelp": "956a1502ebdd3846ad43e369b8829399",
+      "nonStateActorCommitments": "f8830481aecb587e2a0a2d68e344715f",
+      "listOfNonStateActors": "7f1d73ba15a2f90b640996a678a4cf49",
+      "anyOverlaps": "f8c02fc3f4f600ff19c808a420c1ff06",
+      "yes": "93cba07454f06a4a960172bbd6e2a435",
+      "no": "bafd7322c6e97d25b6299b5d6fe8920b",
+      "commitmentsAndActors": "5c448ede94993b73cbf94d58d434c8b1",
+      "meansToImplement": "811581762d1212eaefde3f9fde09befa",
+      "additionalMeanOfImplementation": "8256b12e8a526713639f4e84b73b126d",
+      "yesMeansOfImplementation": "13ef979b1f5cf3ab000f974f4bfea285",
+      "noMeansOfImplementation": "2eff47472c116eccf848660514b6614e",
+      "other": "6311ae17c1ee52b36e68aaf4ad066387",
+      "pleaseExplain": "bcd773a421295064d56dbd3a63b75cba",
+      "additionalExplanation": "51d0bb7025ea6fa9a9b9b0eef1cf003d",
+      "additionalInformation": "0f68b904e33d9ac04605aecc958bcf52",
+      "relevantInformation": "d53a40e7430a9a1e5e2c5310d504dd23",
+      "globalGoalsAndTargets": "a34ea1c0c9561e88ee2db93dfc0d2a3b"
+    }
+  }
 }
