--- a/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
+++ b/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
@@ -1,4 +1,13 @@
 {
   "sectionII": "القسم الثاني",
-  "sectionIIDescription": "حالة الاستراتيجيات وخطط العمل الوطنية المُنقحّة أو المُحدَّثة للتنوع البيولوجي في ضوء إطار كونمينغ - مونتريال العالمي للتنوع البيولوجي "
+  "sectionIIDescription": "حالة الاستراتيجيات وخطط العمل الوطنية المُنقحّة أو المُحدَّثة للتنوع البيولوجي في ضوء إطار كونمينغ - مونتريال العالمي للتنوع البيولوجي ",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.434Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "sectionII": "a487ef3cd0fee355fefe3fedbb85bb01",
+      "sectionIIDescription": "7bc04f6a1770ae34e5dff0f399339034"
+    }
+  }
 }
