--- a/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
+++ b/i18n/ar/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
@@ -3,5 +3,18 @@
   "sectionIDescription": "لمحة موجزة عن عملية إعداد التقرير",
   "preparationProcess": "يرجى تقديم وصف موجز لعملية إعداد هذا التقرير (قد تشمل الردود ما يلي)",
   "coordination": "استخدام آليات التنسيق والمنهجية المتبعة لجمع البيانات والتحقق منها (عند الاقتضاء)، فضلا عن أبرز التحديات التي حدثت أثناء إعداد التقرير؛",
-  "consultation": "إجراء مشاورات على مختلف المستويات لإعداد هذا التقرير، بمشاركة مختلف الجهات المعنية وتعاونهم ومساهماتهم، مع مراعاة اختلاف الظروف من بلد لآخر."
+  "consultation": "إجراء مشاورات على مختلف المستويات لإعداد هذا التقرير، بمشاركة مختلف الجهات المعنية وتعاونهم ومساهماتهم، مع مراعاة اختلاف الظروف من بلد لآخر.",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.43Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "sectionI": "6914d052dd6321ed110176026903becd",
+      "sectionIDescription": "64b4e786cecb7f5008b67378bc132957",
+      "preparationProcess": "9e1bf6126378c7c403a3de8a30f69c46",
+      "coordination": "6d128b26a0a49dedceed5a9f56715def",
+      "consultation": "a2993576e55818e97fcab14983f2f319",
+      "sectionMandatory": "3d3e416af01ddbdd3a8609c2ea6680ab"
+    }
+  }
 }
