--- a/i18n/ar/layouts/default.json
+++ b/i18n/ar/layouts/default.json
@@ -1,4 +1,13 @@
 {
   "title": "أداة الإبلاغ عبر الإنترنت",
-  "description": "تتيح أداة الإبلاغ عبر الإنترنت (ORT) للبلدان تحديث الاستراتيجيات وخطط العمل الوطنية للتنوع البيولوجي، وتشمل الأهداف الوطنية قبل الاجتماع السادس عشر لمؤتمر الأطراف."
+  "description": "تتيح أداة الإبلاغ عبر الإنترنت (ORT) للبلدان تحديث الاستراتيجيات وخطط العمل الوطنية للتنوع البيولوجي، وتشمل الأهداف الوطنية قبل الاجتماع السادس عشر لمؤتمر الأطراف.",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.467Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "ef8f1ae366a15fa1b70fd7c9916ba0d4",
+      "description": "d43f8035151abc8124b640f5b7da42bb"
+    }
+  }
 }
