Spanish translation with hashes

--- a/i18n/es/components/common/cbd-article.json
+++ b/i18n/es/components/common/cbd-article.json
@@ -1,4 +1,13 @@
 {
   "noInformation": "No hay información disponible para esta sección actualmente.",
-  "loading": "Cargando el contenido de la sección"
+  "loading": "Cargando el contenido de la sección",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.448Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "noInformation": "10a9ef005da5b9ab7d7a0a003225ae16",
+      "loading": "a2b842ed3308f472a23e37510c0a7f86"
+    }
+  }
 }
