--- a/i18n/es/components/pages/national-targets/my-country/record-list.json
+++ b/i18n/es/components/pages/national-targets/my-country/record-list.json
@@ -1,5 +1,5 @@
 {
-  "title": "Título",
+  "title": "Denominación",
   "gbfGoals": "Objetivo(s) y Meta(s) del Marco Mundial de Biodiversidad de Kunming-Montreal",
   "status": "Estado",
   "updatedOn": "Actualizado el",
@@ -7,5 +7,24 @@
   "edit": "Editar",
   "passedValidation": "Validación exitosa",
   "hasErrors": "No pudo realizarse la validación",
-  "validating": "Validando..."
+  "validating": "Validando...",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.393Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "b78a3223503896721cca1303f776159b",
+      "gbfGoals": "c9e0e3c5305181aefa173c26c524536e",
+      "status": "ec53a8c4f07baed5d8825072c89799be",
+      "updatedOn": "b7aabb29ffd777e217ebdaae32a03a2b",
+      "view": "4351cfebe4b61d8aa5efa1d020710005",
+      "edit": "7dce122004969d56ae2e0245cb754d35",
+      "passedValidation": "b2a97ba1150b313c0a5673334571a272",
+      "hasErrors": "7ce566811655aedfaf524bde4e32f575",
+      "validating": "2c3f5a2e1d77bff6ce95d32aec56dbd9",
+      "filterByTitle": "f1eb8e681d899f7379a31801852ac14c",
+      "filterByGlobalTargets": "3d6579e1ec96888dc4552f8cc9bb9d02",
+      "filterByGlobalGoals": "22137392498eb907a4e32e976721e194"
+    }
+  }
 }
