--- a/i18n/es/components/pages/national-targets/list.json
+++ b/i18n/es/components/pages/national-targets/list.json
@@ -1,3 +1,11 @@
 {
-  "noRecords": "¡No hay registros para mostrar!"
+  "noRecords": "¡No hay registros para mostrar!",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.453Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "noRecords": "666a9d169ef9dfe0370d4c4434a92105"
+    }
+  }
 }
