--- a/i18n/es/components/pages/national-targets/my-country/part-1/index.json
+++ b/i18n/es/components/pages/national-targets/my-country/part-1/index.json
@@ -2,5 +2,45 @@
   "title": "Meta(s) nacional(es): Parte I",
   "goToOverview": "Ir al Panorama",
   "refresh": "Actualizar",
-  "submitNewTarget": "Presentar una meta nueva"
+  "submitNewTarget": "Presentar una meta nueva",
+  "tourWelcomeTitle": "Metas nacionales",
+  "partIRefreshTitle": "Actualizar",
+  "partISubmitTitle": "Presentar una meta nueva",
+  "partINationalTargetRecordTitle": "Registro",
+  "partIStatusTitle": "Estado del registro",
+  "partIViewTitle": "Ver",
+  "partIEditTitle": "Editar",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.417Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "eb47bb63d793e2a33c3e68c8d5626135",
+      "goToOverview": "4d0f98578ddd1db2b9bea9e5cf5603d1",
+      "refresh": "63a6a88c066880c5ac42394a22803ca6",
+      "submitNewTarget": "bb7870b2521f859d7a79847384d6670b",
+      "tourWelcomeTitle": "c950e570c20e4ee5b489666258ef17d8",
+      "tourWelcomeContent": "7cbfecdaea53e5bd55f136a7ed4706d4",
+      "partICountsTitle": "b65df30bc08dd590eb9bc96c5099686b",
+      "partICountsContent": "7ecb6692f46a5ec28ac2b16be1a9b841",
+      "partIGoToOverviewTitle": "714bfbab0e9ef067335908033e7360a5",
+      "partIGoToOverviewContent": "146a6cc97b7e6b4cae3fd2c769fc3d71",
+      "partIRefreshTitle": "63a6a88c066880c5ac42394a22803ca6",
+      "partIRefreshContent": "d69c03d53eed4c8486e39b70027ca37a",
+      "partISubmitTitle": "bb7870b2521f859d7a79847384d6670b",
+      "partISubmitContent": "5c1eec3956987a986e6d02a1c4d90560",
+      "partINationalTargetRecordTitle": "6a0d9eaee314c567fd72fb97ee707a36",
+      "partINationalTargetRecordContent": "fa6a1b9104c6e2a4c84a8ddece9d9029",
+      "partILinkedGbfTitle": "5cae51e7fe379fc873fc7829820445b7",
+      "partILinkedGbfContent": "f987e14ea44a9896628f2e5a6e54f109",
+      "partIStatusTitle": "d24f880a00336ee9f921fbedeafe4734",
+      "partIStatusContent": "564a1873e56fe10c9da7c310c8edf9b2",
+      "partIViewTitle": "4351cfebe4b61d8aa5efa1d020710005",
+      "partIViewContent": "5fcbe2360f2665a0a7f6ca08f58701a1",
+      "partIEditTitle": "7dce122004969d56ae2e0245cb754d35",
+      "partIEditContent": "43a238e48fe7f81bc7660eb1173e3681",
+      "partIDeleteTitle": "f2a6c498fb90ee345d997f888fce3b18",
+      "partIDeleteContent": "c1506fb645c045ffbd9cf3065917e6c0"
+    }
+  }
 }
