--- a/i18n/es/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
+++ b/i18n/es/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
@@ -1,4 +1,13 @@
 {
   "sectionII": "Sección II",
-  "sectionIIDescription": "Situación relativa a las estrategias y los planes de acción nacionales en materia de diversidad biológica (EPANDB) revisados y actualizados a la luz del Marco Mundial de Biodiversidad de Kunming-Montreal "
+  "sectionIIDescription": "Situación relativa a las estrategias y los planes de acción nacionales en materia de diversidad biológica (EPANDB) revisados y actualizados a la luz del Marco Mundial de Biodiversidad de Kunming-Montreal ",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.434Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "sectionII": "a487ef3cd0fee355fefe3fedbb85bb01",
+      "sectionIIDescription": "7bc04f6a1770ae34e5dff0f399339034"
+    }
+  }
 }
