--- a/i18n/es/layouts/default.json
+++ b/i18n/es/layouts/default.json
@@ -1,4 +1,13 @@
 {
   "title": "Herramienta en línea para la presentación de informes",
-  "description": "La herramienta en línea para la presentación de informes permite que todos los países actualicen las estrategias y los planes de acción nacionales en materia de diversidad biológica (EPANDB), incluidas las metas nacionales, requeridos por la decimosexta reunión de la Conferencia de las Partes (COP 16)."
+  "description": "La herramienta en línea para la presentación de informes permite que todos los países actualicen las estrategias y los planes de acción nacionales en materia de diversidad biológica (EPANDB), incluidas las metas nacionales, requeridos por la decimosexta reunión de la Conferencia de las Partes (COP 16).",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.467Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "ef8f1ae366a15fa1b70fd7c9916ba0d4",
+      "description": "d43f8035151abc8124b640f5b7da42bb"
+    }
+  }
 }
