--- a/i18n/es/pages/national-targets/my-country/index.json
+++ b/i18n/es/pages/national-targets/my-country/index.json
@@ -1,3 +1,11 @@
 {
-  "title": "Panorama de las metas nacionales del país"
+  "title": "Panorama de las metas nacionales del país",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.457Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "e52fd8f40af977e30c08380d9c343e46"
+    }
+  }
 }
