--- a/i18n/fr/pages/dashboard.json
+++ b/i18n/fr/pages/dashboard.json
@@ -15,5 +15,54 @@
   "title": "Titre",
   "country": "Pays",
   "type": "Type",
-  "publishedOn": "Publié sur"
+  "publishedOn": "Publié sur",
+  "tourTitle": "Tableau de bord",
+  "userInfoTitle": "Vos informations personnelles",
+  "governmentTitle": "Pays d'affiliation",
+  "rolesTitle": "Rôle(s)",
+  "languageChangeTitle": "Langue",
+  "needHelpTitle": "Encore besoin d’aide?",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.419Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "recentPublish": "6b8c928a64004c7c607b3b3f463b026f",
+      "recentlyPublished": "c7ae40171c22918cf918915fb7c5abcd",
+      "countryRepresentative": "a130c5fdca46d06fcc6b4b71a5d00fe0",
+      "clickHere": "a4ea91cd0d1ea33d8113457644dd6157",
+      "toBegin": "197536f4f0c79f1dfa0d49471e4580bd",
+      "6Nr": "f8ddd7b32e7ef33ac3b870d0f48498cc",
+      "by": "53e5aa2c97fef1555d2511de8218c544",
+      "countries": "790d59ef178acbc75d233bf4211763c6",
+      "7Nr": "bd1d74614da084596143ca1fd6c22294",
+      "nationalTargets": "c950e570c20e4ee5b489666258ef17d8",
+      "nbsapsFull": "66e971ea9238bd26505f9404c4460b71",
+      "nbsaps": "2b0024dd9dfd8531883f91b39fb8a116",
+      "latestRecords": "5a9ec4a1484936720351bf1f0e84bb9a",
+      "title": "b78a3223503896721cca1303f776159b",
+      "country": "59716c97497eb9694541f7c3d37b1a4d",
+      "type": "a1fa27779242b4902f7ae3bdd5c6d508",
+      "publishedOn": "ddbc197c69b2e4a35afeeb269ed25808",
+      "tourTitle": "2938c7f7e560ed972f8a4f68e80ff834",
+      "tourWelcomeTitle": "5b2e397cd2a31a056e52ea85e44ca4eb",
+      "tourWelcomeContent": "c63c06ea14ecfa7567588235cad7c44d",
+      "userInfoTitle": "6335a00a08fde0fbb8f6d6630cdadd92",
+      "userInfoContent": "a0defcf2a34b34d766325d7983f79c5f",
+      "governmentTitle": "721c35f425a0e18e43abc29b9de57ec6",
+      "governmentContent": "4a9d791b1196cae792b9cfc03ff2f580",
+      "rolesTitle": "87c31a8841364124e0638e3284621e10",
+      "rolesContent": "aea70182af489a457b948987f7fa3142",
+      "recentlyPublishedTitle": "b30b554eec2c44f3876ce7bee229bf29",
+      "recentlyPublishedContent": "6c3397eaf853c7d3f909ddc58dadbebf",
+      "topNavigationTitle": "846495f9ceed11accf8879f555936a7d",
+      "topNavigationContent": "b315451f3de363bc9a9f4b9f7c98ec22",
+      "sidebarNavTitle": "c64ab2c39a26d20c8c8916803cb01faa",
+      "sidebarNavContent": "fffa1e098d12c79f37049bbe047a13e4",
+      "languageChangeTitle": "4994a8ffeba4ac3140beb89e8d41f174",
+      "languageChangeContent": "1b14df9495cbf21909a977a3fdda0d9c",
+      "needHelpTitle": "21019d5221b8a27734792493c892bbe2",
+      "needHelpContent": "5a9d9afd99333137d4acf1948bfb394b"
+    }
+  }
 }
