--- a/i18n/fr/components/pages/national-targets/my-country/missing-target-error.json
+++ b/i18n/fr/components/pages/national-targets/my-country/missing-target-error.json
@@ -1,3 +1,11 @@
 {
-  "errorMessage": "Votre pays n'a soumis aucun objectif national pour cette objectif mondial."
+  "errorMessage": "Votre pays n'a soumis aucun objectif national pour cette objectif mondial.",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.453Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "errorMessage": "473522f2d167b6b683fc148a6ce9e696"
+    }
+  }
 }
