--- a/i18n/fr/layouts/default.json
+++ b/i18n/fr/layouts/default.json
@@ -1,4 +1,13 @@
 {
   "title": "Outil en ligne pour l'élaboration de rapports",
-  "description": "L'outil de rapport en ligne (ORT) permet aux pays de mettre à jour les stratégies et plans d'action nationaux pour la biodiversité (SPANB), y compris les objectifs nationaux, d'ici la seizième réunion de la Conférence des Parties (COP-16)."
+  "description": "L'outil de rapport en ligne (ORT) permet aux pays de mettre à jour les stratégies et plans d'action nationaux pour la biodiversité (SPANB), y compris les objectifs nationaux, d'ici la seizième réunion de la Conférence des Parties (COP-16).",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.467Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "ef8f1ae366a15fa1b70fd7c9916ba0d4",
+      "description": "d43f8035151abc8124b640f5b7da42bb"
+    }
+  }
 }
