--- a/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
+++ b/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-VI.json
@@ -1,4 +1,13 @@
 {
   "sectionII": "Раздел II",
-  "sectionIIDescription": "Статус пересмотренных или обновленных национальных стратегий и планов по сохранению биоразнообразия (НСПДСБ) в свете Куньминско-Монреальской глобальной рамочной программы в области биоразнообразия "
+  "sectionIIDescription": "Статус пересмотренных или обновленных национальных стратегий и планов по сохранению биоразнообразия (НСПДСБ) в свете Куньминско-Монреальской глобальной рамочной программы в области биоразнообразия ",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.434Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "sectionII": "a487ef3cd0fee355fefe3fedbb85bb01",
+      "sectionIIDescription": "7bc04f6a1770ae34e5dff0f399339034"
+    }
+  }
 }
