--- a/i18n/ru/layouts/default.json
+++ b/i18n/ru/layouts/default.json
@@ -1,4 +1,13 @@
 {
   "title": "Онлайновый инструмент представления отчетности",
-  "description": "Онлайновый инструмент представления отчетности (ОИО) позволяет странам обновить национальные стратегии и планы действий по сохранению биоразнообразия (НСПДСБ), включая национальные задачи, к шестнадцатому совещанию Конференции Сторон (КС-16)"
+  "description": "Онлайновый инструмент представления отчетности (ОИО) позволяет странам обновить национальные стратегии и планы действий по сохранению биоразнообразия (НСПДСБ), включая национальные задачи, к шестнадцатому совещанию Конференции Сторон (КС-16)",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.467Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "title": "ef8f1ae366a15fa1b70fd7c9916ba0d4",
+      "description": "d43f8035151abc8124b640f5b7da42bb"
+    }
+  }
 }
