--- a/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
+++ b/i18n/ru/components/pages/nr7/my-country/edit/nr7-edit-section-I.json
@@ -3,5 +3,18 @@
   "sectionIDescription": "Краткий обзор процесса подготовки доклада",
   "preparationProcess": "Кратко опишите процесс подготовки этого доклада (ответы могут включать следующие элементы):",
   "coordination": "использовавшиеся механизмы координации и методика сбора и проверки достоверности данных (если применимо), а также основные возникшие трудности;",
-  "consultation": "консультации, проводившиеся на разных уровнях для подготовки этого доклада с привлечением к участию различных субъектов деятельности, с учетом национальных обстоятельств."
+  "consultation": "консультации, проводившиеся на разных уровнях для подготовки этого доклада с привлечением к участию различных субъектов деятельности, с учетом национальных обстоятельств.",
+  "#meta": {
+    "hashedOn": "2024-07-04T14:56:10.43Z",
+    "algorithm": "md5",
+    "branch": "2024.26.0",
+    "hashes": {
+      "sectionI": "6914d052dd6321ed110176026903becd",
+      "sectionIDescription": "64b4e786cecb7f5008b67378bc132957",
+      "preparationProcess": "9e1bf6126378c7c403a3de8a30f69c46",
+      "coordination": "6d128b26a0a49dedceed5a9f56715def",
+      "consultation": "a2993576e55818e97fcab14983f2f319",
+      "sectionMandatory": "3d3e416af01ddbdd3a8609c2ea6680ab"
+    }
+  }
 }
